methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:18: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    if (getCouleurSol() == c:Color) {
                        ^SlugSnail:18: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if (getCouleurSol() == c:Color) {
                            ^